Updated formatting - navigation bar complete header 50%

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <div class="header">
             <div class="header-top-row">
                 <div class="search-bar">
-                    <img src="" alt="search-icon">
+                    <img src="icons/search.svg" alt="search-icon">
                     <input type="text">
                 </div>
                 <div class="user-settings">
-                    <img src="" alt="notification-image">
-                    <img src="" alt="user-image">
-                    <p>Username</p>
+                    <img src="icons/notifications.svg" alt="notification-image">
+                    <img src="icons/goat.png" alt="user-image">
+                    <p>Sam Phillips</p>
                 </div>
             </div>
             <div class="header-bottom-row">
                 <div class="user-welcome">
-                    <img src="" alt="user-image-large">
-                    <div>
-                        <p>Hi there,</p>
-                        <p>Username (@username)</p>
+                    <img src="icons/goat.png" alt="user-image-large">
+                    <div class="user-greeting">
+                        <div class="greeting">Hi there,</div>
+                        <div class="name">Sam (@SamP)</div>
                     </div>
                 </div>
                 <div class="header-options">
@@ -45,19 +45,46 @@
             <div class="nav-header">Dashboard</div>
             <div class="upper-list">
                 <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
+                    <li>
+                        <img src="icons/home.svg" alt="home_icon">
+                        <p>Home</p>
+                    </li>
+                    <li>
+                        <img src="icons/Profile.svg" alt="profile_icon">
+                        <p>Profile</p>
+                    </li>
+                    <li>
+                        <img src="icons/messages.svg" alt="">
+                        <p>Messages</p>
+                    </li>
+                    <li>
+                        <img src="icons/history.svg" alt="">
+                        <p>History</p>
+                    </li>
+                    <li>
+                        <img src="icons/tasks.svg" alt="">
+                        <p>Tasks</p>
+                    </li>
+                    <li>
+                        <img src="icons/communities.svg" alt="">
+                        <p>Communities</p>
+                    </li>
                 </ul>
             </div>
             <div class="lower-list">
                 <ul>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li>
+                        <img src="icons/settings.svg" alt="">
+                        <p>Settings</p>
+                    </li>
+                    <li>
+                        <img src="icons/support.svg" alt="">
+                        <p>Support</p>
+                    </li>
+                    <li>
+                        <img src="icons/privacy.svg" alt="">
+                        <p>Privacy</p>
+                    </li>
                 </ul>
             </div>
 
