--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
                     </div>
                 </div>
                 <div class="header-options">
-                    <ul>
-                        <li>New</li>
-                        <li>Upload</li>
-                        <li>Share</li>
-                    </ul>
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
                 </div>
                 
             </div>
@@ -89,8 +87,146 @@
             </div>
 
         </div>
-        <div class="main">Main</div>
-        <div class="footer">Footer</div>
+
+        <!--main start-->
+        <div class="main">
+            <div class="projects">
+                <div class="card">
+                    <div class="card-title">Super Cool Poject</div>
+                    <div class="card-content">
+                        Led do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    </div>
+                    <div class="card-icons">
+                        <img src="icons/favorite.svg" alt="">
+                        <img src="icons/view.svg" alt="">
+                        <img src="icons/share.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-title">Less Cool Project</div>
+                    <div class="card-content">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                    </div>
+                    <div class="card-icons">
+                        <img src="icons/favorite.svg" alt="">
+                        <img src="icons/view.svg" alt="">
+                        <img src="icons/share.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-title">Impossible App</div> 
+                    <div class="card-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati.
+                    </div>
+                    <div class="card-icons">
+                        <img src="icons/favorite.svg" alt="">
+                        <img src="icons/view.svg" alt="">
+                        <img src="icons/share.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-title">Easy App</div>
+                    <div class="card-content">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
+                    <div class="card-icons">
+                        <img src="icons/favorite.svg" alt="">
+                        <img src="icons/view.svg" alt="">
+                        <img src="icons/share.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-title">Other App</div>
+                    <div class="card-content">
+                        Lorem Ipsum nulla pariatur. Ut enim ad minim veniam, quis nostrud exercitation.
+                    </div>
+                    <div class="card-icons">
+                        <img src="icons/favorite.svg" alt="">
+                        <img src="icons/view.svg" alt="">
+                        <img src="icons/share.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-title">Last App!</div>
+                    <div class="card-content">
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                    <div class="card-icons">
+                        <img src="icons/favorite.svg" alt="">
+                        <img src="icons/view.svg" alt="">
+                        <img src="icons/share.svg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="right-sidebar">
+                <div class="announcements">
+                    <div class="header">
+                        <p>Announcements</p>
+                    </div>
+                    <div class="announcement-container">
+                        <div class="an-card">
+                            <div class="title">Site Maintenance</div>
+                            <div class="details">
+                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                            </div>
+                        </div>
+
+                        <div class="an-card">
+                            <div class="title">Community Details</div>
+                            <div class="details">
+                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                            </div>
+                        </div>
+
+                        <div class="an-card">
+                            <div class="title">Updated Privacy Policy</div>
+                            <div class="details">
+                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="Trending">
+                    <div class="header">
+                        <p>Trending</p>
+                    </div>
+                    <div class="trending-container">
+                        <div class="trend-card">
+                            <div class="title">@tegan</div>
+                            <div class="info">World Peace Builder</div>
+                        </div>
+                        <div class="trend-card">
+                            <div class="title">@morgan</div>
+                            <div class="info">Super cool project</div>
+                        </div>
+                        <div class="trend-card">
+                            <div class="title">@kendall</div>
+                            <div class="info">Life Changer</div>
+                        </div>
+                        <div class="trend-card">
+                            <div class="title">@alex</div>
+                            <div class="info">No Traffic Maker</div>
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+        <!--main end-->
+        <!--footer start-->
+        <div class="footer">Sam Phillips 2023</div>
+        <!--footer end-->
     </div>
 
     
