dashboard - bert version

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 </div>
                 <div class="user-settings">
                     <img src="icons/notifications.svg" alt="notification-image">
-                    <img src="icons/goat.png" alt="user-image">
-                    <p>Sam Phillips</p>
+                    <img src="icons/bert2.jpg" alt="user-image">
+                    <p>Bertie Gladwin</p>
                 </div>
             </div>
             <div class="header-bottom-row">
                 <div class="user-welcome">
-                    <img src="icons/goat.png" alt="user-image-large">
+                    <img src="icons/bert2.jpg" alt="user-image-large">
                     <div class="user-greeting">
                         <div class="greeting">Hi there,</div>
-                        <div class="name">Sam (@SamP)</div>
+                        <div class="name">Bert! (@bertieshitmuncher)</div>
                     </div>
                 </div>
                 <div class="header-options">
@@ -92,9 +92,12 @@
         <div class="main">
             <div class="projects">
                 <div class="card">
-                    <div class="card-title">Super Cool Poject</div>
+                    <div class="card-title">Things to do today:</div>
                     <div class="card-content">
-                        Led do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        Sleep <br> Keep kong in mouth <br>
+                        look for Gemma's slipper <br> 
+                        Stay away from the outside dogs
+
                     </div>
                     <div class="card-icons">
                         <img src="icons/favorite.svg" alt="">
@@ -104,9 +107,11 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-title">Less Cool Project</div>
+                    <div class="card-title">@Ernie tweeted</div>
                     <div class="card-content">
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        Who wants to go for a walk with me? I promise I won't tug on the leash too much 🐾🐕 #dogwalk #goodboy #outdoorfun" <br>
+                        <br>
+                        Anyone seen my ball? 🐶
                     </div>
                     <div class="card-icons">
                         <img src="icons/favorite.svg" alt="">
@@ -116,9 +121,11 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-title">Impossible App</div> 
+                    <div class="card-title">Calendar</div> 
                     <div class="card-content">
-                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati.
+                        SUNDAY 12TH MARCH: <br>
+                        Nothing Planned
+                        <br>
                     </div>
                     <div class="card-icons">
                         <img src="icons/favorite.svg" alt="">
@@ -128,9 +135,9 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-title">Easy App</div>
+                    <div class="card-title">Contacts</div>
                     <div class="card-content">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ernie: Woof
                     </div>
                     <div class="card-icons">
                         <img src="icons/favorite.svg" alt="">
@@ -140,9 +147,10 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-title">Other App</div>
+                    <div class="card-title">Diet</div>
                     <div class="card-content">
-                        Lorem Ipsum nulla pariatur. Ut enim ad minim veniam, quis nostrud exercitation.
+                        
+
                     </div>
                     <div class="card-icons">
                         <img src="icons/favorite.svg" alt="">
@@ -152,9 +160,9 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-title">Last App!</div>
+                    <div class="card-title"> Fluffy People</div>
                     <div class="card-content">
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        
                     </div>
                     <div class="card-icons">
                         <img src="icons/favorite.svg" alt="">
@@ -200,20 +208,20 @@
                     </div>
                     <div class="trending-container">
                         <div class="trend-card">
-                            <div class="title">@tegan</div>
-                            <div class="info">World Peace Builder</div>
+                            <div class="title">@Ernie</div>
+                            <div class="info">ball, ball, ball</div>
                         </div>
                         <div class="trend-card">
-                            <div class="title">@morgan</div>
-                            <div class="info">Super cool project</div>
+                            <div class="title">@Gemma</div>
+                            <div class="info">Goat Sergeant</div>
                         </div>
                         <div class="trend-card">
-                            <div class="title">@kendall</div>
+                            <div class="title">@Max</div>
                             <div class="info">Life Changer</div>
                         </div>
                         <div class="trend-card">
-                            <div class="title">@alex</div>
-                            <div class="info">No Traffic Maker</div>
+                            <div class="title">@Kayla</div>
+                            <div class="info">Queen Kayla</div>
                         </div>
 
                     </div>
